--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -64,15 +64,12 @@ jobs:
       env:
         version: ${{steps.get-version.outputs.v}}
         url: https://github.com/${{github.repository}}
-        readme: https://github.com/${{github.repository}}/blob/master/README.md
-        bugs: https://github.com/${{github.repository}}/issues
-        changelog: https://github.com/${{github.repository}}/releases/latest
         manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
         download: https://github.com/${{github.repository}}/releases/download/${{github.ref_name}}/module.zip
 
     # Create a zip file with all files required by the module to add to the release.
     - name: Bundle into ZIP file
-      run: zip -r ./module.zip module.json assets/ dist/ lang/ packs/ LICENSE documentation-${{ github.ref_name }}.zip
+      run: zip -r ./module.zip module.json assets/ dist/ lang/ packs/ LICENSE
 
     - name: Recover Release Data
       uses: dawidd6/action-download-artifact@v6
