fix: corrects doc scripts and some documentation

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test": "vitest --typecheck --run",
     "eslint": "eslint .",
     "prepare": "husky",
-    "serve:vtt": "cd .foundryvtt && docker compose up -d",
-    "build:docs": "docker run --rm --user \"$(id -u):$(id -g)\" -v \"$(pwd)/docs\":/docs ghcr.io/ulenarofmondarth/sphinx-docs make html",
-    "devserve:docs": "docker run --rm --user \"$(id -u):$(id -g)\" --name docapserver -d -p 8086:8000 -v \"$(pwd)/docs\":/doc -w /doc ghcr.io/ulenarofmondarth/sphinx-docs sphinx-autobuild --host 0.0.0.0 --port 8000 . _build/html",
+    "serve:vtt": "zx scripts/docker/vttserve.mjs",
+    "build:docs": "zx scripts/docker/docbuild.mjs",
+    "devserve:docs": "zx scripts/docker/docserve.mjs",
     "prettier:format": "prettier --config .prettierrc.json --write \"./src/**/*.{ts,js,mjs,json,scss,css}\"",
     "lint-staged": "lint-staged",
     "lint": "eslint src/",
@@ -37,12 +37,14 @@
     "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "commitizen": "4.3.1",
+    "config": "^4.1.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jsdoc": "^50.6.10",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-svelte": "^3.5.1",
+    "find-up": "^7.0.0",
     "foundryvtt-sync": "github:MrVauxs/FoundryVTT-Sync",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
@@ -54,7 +56,9 @@
     "typescript-eslint": "^8.31.0",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "zod": "^4.0.14",
+    "zx": "^8.7.2"
   },
   "browserslist": [
     ">5%",
